--- a/product-page/styleProductPage.css
+++ b/product-page/styleProductPage.css
@@ -6,170 +6,9 @@
 .product-page {
   background: #ffffff;
   width: 100%;
-  height: 3487px;
+  height: auto;
   position: relative;
   overflow: hidden;
-}
-
-
-.footer {
-  height: 345px;
-  position: absolute;
-  right: -3px;
-  left: 0px;
-  bottom: 0px;
-}
-
-.background-footer {
-  background-color: #808080;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  right: 0px;
-  left: 0px;
-  bottom: 0px;
-  overflow: visible;
-}
-
-.social-icons {
-  position: absolute;
-  inset: 0;
-}
-
-.img-instagram {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  left: calc(50% - -228.84px);
-  bottom: 87px;
-  object-fit: cover;
-}
-
-.img-facebook {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  left: calc(50% - -228.84px);
-  bottom: 147px;
-  object-fit: cover;
-}
-
-.img-whatapp {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  left: calc(50% - -228.5px);
-  bottom: 207px;
-  object-fit: cover;
-}
-
-.txt-futer {
-  position: absolute;
-  inset: 0;
-}
-
-.txt-copy {
-  color: #ffffff;
-  text-align: center;
-  font-family: "Inter-SemiBold", sans-serif;
-  font-size: 20px;
-  line-height: 130%;
-  font-weight: 600;
-  position: absolute;
-  left: calc(50% - 152.5px);
-  bottom: 56px;
-  width: 305px;
-  height: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.txt-footer {
-  color: #ffffff;
-  text-align: left;
-  font-family: "Inter-Regular", sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 5.5px);
-  bottom: 256px;
-  width: 142px;
-  height: 14px;
-}
-
-.txt-footer2 {
-  color: #ffffff;
-  text-align: left;
-  font-family: "Inter-Regular", sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 5.5px);
-  bottom: 275px;
-  width: 152px;
-  height: 14px;
-}
-
-.txt-footer3 {
-  color: #ffffff;
-  text-align: left;
-  font-family: "Inter-Regular", sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 146.5px);
-  bottom: 218px;
-  width: 101px;
-  height: 14px;
-}
-
-.txt-footer4 {
-  color: #ffffff;
-  text-align: left;
-  font-family: "Inter-Regular", sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 146.5px);
-  bottom: 237px;
-  width: 93px;
-  height: 14px;
-}
-
-.txt-footer5 {
-  color: #ffffff;
-  text-align: left;
-  font-family: "Inter-Regular", sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 146.5px);
-  bottom: 256px;
-  width: 93px;
-  height: 14px;
-}
-
-.txt-footer6 {
-  color: #ffffff;
-  text-align: left;
-  font-family: "Inter-Regular", sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 146.5px);
-  bottom: 275px;
-  width: 101px;
-  height: 14px;
-}
-
-.img-logo {
-  width: 183px;
-  height: 183px;
-  position: absolute;
-  left: calc(50% - 411.5px);
-  bottom: 81px;
-  object-fit: cover;
 }
 
 /* --------------------- header -------------------------*/
@@ -823,6 +662,175 @@ input:focus {
 }
 
 /* --------------------------------------------------------- */
+/* --------------------------- footer ------------------------------ */
+
+footer {
+  background-color: #808080;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+  width: 100%;
+  bottom: 0;
+}
+
+.footer {
+  box-sizing: border-box;
+  width: 1443px;
+  height: 345px;
+  position: relative;
+}
+
+.background-footer {
+  height: 345px;
+  position: absolute;
+  right: 0px;
+  left: 0px;
+  bottom: 0px;
+  overflow: visible;
+}
+
+.social-icons {
+  position: absolute;
+  inset: 0;
+}
+
+.img-instagram {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: calc(50% - -228.84px);
+  bottom: 87px;
+  object-fit: cover;
+}
+
+.img-facebook {
+  width: 55px;
+  height: 55px;
+  position: absolute;
+  left: calc(50% - -228.84px);
+  bottom: 147px;
+  object-fit: cover;
+}
+
+.img-whatapp {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: calc(50% - -228.5px);
+  bottom: 207px;
+  object-fit: cover;
+}
+
+.txt-futer {
+  position: absolute;
+  inset: 0;
+}
+
+.txt-copy {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Inter-SemiBold", sans-serif;
+  font-size: 20px;
+  line-height: 130%;
+  font-weight: 600;
+  position: absolute;
+  left: calc(50% - 152.5px);
+  bottom: 56px;
+  width: 305px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.txt-footer {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  position: absolute;
+  left: calc(50% - 5.5px);
+  bottom: 256px;
+  width: 142px;
+  height: 14px;
+}
+
+.txt-footer2 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  position: absolute;
+  left: calc(50% - 5.5px);
+  bottom: 275px;
+  width: 152px;
+  height: 14px;
+}
+
+.txt-footer3 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  position: absolute;
+  left: calc(50% - 146.5px);
+  bottom: 218px;
+  width: 101px;
+  height: 14px;
+}
+
+.txt-footer4 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  position: absolute;
+  left: calc(50% - 146.5px);
+  bottom: 237px;
+  width: 93px;
+  height: 14px;
+}
+
+.txt-footer5 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  position: absolute;
+  left: calc(50% - 146.5px);
+  bottom: 256px;
+  width: 93px;
+  height: 14px;
+}
+
+.txt-footer6 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  position: absolute;
+  left: calc(50% - 146.5px);
+  bottom: 275px;
+  width: 101px;
+  height: 14px;
+}
+
+.img-logo {
+  width: 183px;
+  height: 183px;
+  position: absolute;
+  left: calc(50% - 411.5px);
+  bottom: 81px;
+  object-fit: cover;
+}
+
+
 section {
   padding: 20PX;
 }
