--- a/distridulces prueba/public/styles/header.css
+++ b/distridulces prueba/public/styles/header.css
@@ -1,309 +1,515 @@
-/* --------------------- header -------------------------*/
-header {
-    background-color: #fff;
-    padding: 0px;
-    width: 100%;
+.header-desktop {
+  background-color: #fff;
+  padding: 0px;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-mobile {
+  background-color: #fff;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  display: none;
+}
+
+.logo-mobile {
+  width: 200px;
+  height: 80px;
+  position: relative;
+  object-fit: cover;
+  float: left;
+  line-height: 80px;
+  margin-right: 40px;
+}
+
+
+.background-logo {
+  border-radius: 0px;
+  width: 474px;
+  height: 144px;
+  display: flex;
+  left: 0px;
+  top: 0px;
+  overflow: visible;
+}
+
+
+.header-info-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  right: 80px;
+  left: 87px;
+  top: 0px;
+  height: 120px;
+}
+
+.sin-t-tulo-1-removebg-preview-1 {
+  flex-shrink: 0;
+  width: 223px;
+  height: 128px;
+  position: relative;
+  object-fit: cover;
+}
+
+.info-box {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-end;
+  flex-shrink: 0;
+  width: 683px;
+  position: relative;
+}
+
+
+.info-adress {
+  flex-shrink: 0;
+  width: 149px;
+  height: 37px;
+  position: static;
+}
+
+.frame-61 {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  left: -12px;
+  top: 18px;
+}
+
+.address-icon {
+  flex-shrink: 0;
+  width: 35px;
+  height: 35px;
+  position: relative;
+  object-fit: cover;
+}
+
+.frame-60 {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: flex-start;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+}
+
+.address {
+  color: var(--navyblue, #001f3f);
+  text-align: center;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: relative;
+}
+
+._123-new-york-usa {
+  color: #808080;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  position: relative;
+}
+
+.info-phone {
+  flex-shrink: 0;
+  width: 147px;
+  height: 37px;
+  position: static;
+}
+
+.frame-612 {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  left: 157px;
+  top: 18px;
+}
+
+.phone-icon {
+  flex-shrink: 0;
+  width: 35px;
+  height: 35px;
+  position: relative;
+  object-fit: cover;
+}
+
+.phone-number {
+  color: var(--navyblue, #001f3f);
+  text-align: center;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: relative;
+}
+
+._650-123-1212 {
+  color: #808080;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  position: relative;
+}
+
+.info-email {
+  flex-shrink: 0;
+  width: 169px;
+  height: 37px;
+  position: static;
+}
+
+.frame-613 {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  left: 324px;
+  top: 18px;
+}
+
+.email-icon {
+  flex-shrink: 0;
+  width: 35px;
+  height: 35px;
+  position: relative;
+  object-fit: cover;
+}
+
+.email-us-here {
+  color: var(--navyblue, #001f3f);
+  text-align: center;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: relative;
+}
+
+.example-gmail-com {
+  color: #808080;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  position: relative;
+}
+
+/* ------ login ------*/
+
+
+
+
+.login {
+  flex-shrink: 0;
+  width: 170px;
+  height: 73px;
+  position: static;
+  border-radius: 20px;
+  cursor: pointer;
+  border: 1px;
+  background-color: #f2f2f2;
+}
+
+
+.txt-iniciar-sesion {
+  color: var(--navyblue, #001f3f);
+  text-align: left;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: absolute;
+  left: 571px;
+  top: 8px;
+  width: 100px;
+}
+
+.para-administradores {
+  color: #808080;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  position: absolute;
+  left: 571px;
+  top: 29px;
+  width: 100px;
+  height: 35px;
+}
+
+.user-img {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 524px;
+  top: 16px;
+  object-fit: cover;
+}
+
+/* Estilos para el modal */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  z-index: 1000;
+}
+
+.modal-contenido {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  position: relative;
+  text-align: center;
+  z-index: 1000;
+  border-radius: 30px;
+}
+
+.modal-contenido h2 {
+  margin-top: 30px;
+  font-family: Poppins;
+  font-size: 40px;
+  color: #000;
+}
+
+.modal-contenido h3 {
+  margin-top: 10px;
+  color: #636363;
+  font-family: Poppins;
+  font-size: 15px;
+}
+
+.modal-contenido form {
+  padding: 20px;
+  margin-top: 30px;
+}
+
+.modal-contenido input {
+  border-radius: 11px;
+  border: 1px solid #001F3F;
+  background: #FFF;
+}
+
+.modal-contenido button {
+  margin-top: 20px;
+  width: 400px;
+  height: 45px;
+  background-color: #304C78;
+  border-radius: 100px;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 16px;
+}
+
+.cerrar {
+
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  font-size: 40px;
+  cursor: pointer;
+}
+
+/* -------------------------- nabvar ------------------------- */
+
+.navbar {
+  background: var(--navyblue, #001f3f);
+  border-radius: 10px;
+  padding: 0px 0px 0px 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  right: 83px;
+  left: 87px;
+  top: 113px;
+  overflow: hidden;
+  height: 45px;
+  margin-bottom: 20px;
+}
+
+.options-navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+  list-style-type: none;
+}
+
+.options-navbar li {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  position: relative;
+}
+
+.options-navbar li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.options-navbar li a:hover {
+  color: #ffd700;
+}
+
+.backgrount-search {
+  background: #ffd700;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.txt-search {
+  color: var(--navyblue, #001f3f);
+  text-align: left;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: relative;
+  display: flex;
+
+}
+
+.lbl-search {
+  border-radius: 30px;
+  flex-shrink: 0;
+  width: 281px;
+  height: 28px;
+  position: relative;
+  overflow: visible;
+  background-color: #ffffff;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  border: none;
+  outline: none;
+}
+
+input:focus {
+  border: none;
+  outline: none;
+  border-color: #304c78;
+  box-shadow: 0 0 5px #304c78;
+
+}
+
+/* Estilos para el modal */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* --------------------------- seccion responsive ------------------------------ */
+
+.mostrar-menu,
+.esconder-menu {
+  font-size: 70px;
+  cursor: pointer;
+  transition: 0.4s;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  display: flex;
+}
+
+.mostrar-menu {
+  order: 1;
+}
+
+.mostrar-menu:hover,
+.esconder-menu:hover {
+  color: #ffd700;
+}
+
+#check {
+  display: none;
+}
+
+@media (max-width:720px) {
+  .header-desktop {
+    display: none;
   }
-  
-  .header-logo {
-    width: 1443px;
-    height: 154px;
-    position: static;
+
+  .header-mobile {
+    display: block;
   }
-  
-  .background-info {
-    background: #ffffff;
-    width: 1443px;
-    height: 154px;
-  
-  }
-  
-  .background-logo {
-    border-radius: 0px;
-    width: 474px;
-    height: 144px;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    overflow: visible;
-  }
-  
-  .header-info-box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    right: 80px;
-    left: 87px;
-    top: 0px;
-    height: 120px;
-  }
-  
-  .sin-t-tulo-1-removebg-preview-1 {
-    flex-shrink: 0;
-    width: 223px;
-    height: 128px;
-    position: relative;
-    object-fit: cover;
-  }
-  
-  .info-box {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    align-items: center;
-    justify-content: flex-end;
-    flex-shrink: 0;
-    width: 683px;
-    position: relative;
-  }
-  
-  .info-adress {
-    flex-shrink: 0;
-    width: 149px;
-    height: 37px;
-    position: static;
-  }
-  
-  .frame-61 {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: center;
-    justify-content: flex-start;
-    position: absolute;
-    left: -12px;
-    top: 18px;
-  }
-  
-  .address-icon {
-    flex-shrink: 0;
-    width: 35px;
-    height: 35px;
-    position: relative;
-    object-fit: cover;
-  }
-  
-  .frame-60 {
-    display: flex;
-    flex-direction: column;
-    gap: 0px;
-    align-items: flex-start;
-    justify-content: center;
-    flex-shrink: 0;
-    position: relative;
-  }
-  
-  .address {
-    color: var(--navyblue, #001f3f);
-    text-align: center;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: relative;
-  }
-  
-  ._123-new-york-usa {
-    color: #808080;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 11px;
-    font-weight: 400;
-    position: relative;
-  }
-  
-  .info-phone {
-    flex-shrink: 0;
-    width: 147px;
-    height: 37px;
-    position: static;
-  }
-  
-  .frame-612 {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: center;
-    justify-content: flex-start;
-    position: absolute;
-    left: 157px;
-    top: 18px;
-  }
-  
-  .phone-icon {
-    flex-shrink: 0;
-    width: 35px;
-    height: 35px;
-    position: relative;
-    object-fit: cover;
-  }
-  
-  .phone-number {
-    color: var(--navyblue, #001f3f);
-    text-align: center;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: relative;
-  }
-  
-  ._650-123-1212 {
-    color: #808080;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 11px;
-    font-weight: 400;
-    position: relative;
-  }
-  
-  .info-email {
-    flex-shrink: 0;
-    width: 169px;
-    height: 37px;
-    position: static;
-  }
-  
-  .frame-613 {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: center;
-    justify-content: flex-start;
-    position: absolute;
-    left: 324px;
-    top: 18px;
-  }
-  
-  .email-icon {
-    flex-shrink: 0;
-    width: 35px;
-    height: 35px;
-    position: relative;
-    object-fit: cover;
-  }
-  
-  .email-us-here {
-    color: var(--navyblue, #001f3f);
-    text-align: center;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: relative;
-  }
-  
-  .example-gmail-com {
-    color: #808080;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 11px;
-    font-weight: 400;
-    position: relative;
-  }
-  
-  /* ------ login ------*/
-  
-  
-  
-  
-  .login {
-    flex-shrink: 0;
-    width: 170px;
-    height: 73px;
-    position: static;
-    border-radius: 20px;
-    cursor: pointer;
-    border: 1px;
-    background-color: #f2f2f2;
-  }
-  
-  
-  .txt-iniciar-sesion {
-    color: var(--navyblue, #001f3f);
-    text-align: left;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: absolute;
-    left: 571px;
-    top: 8px;
-    width: 100px;
-  }
-  
-  .para-administradores {
-    color: #808080;
-    text-align: left;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 11px;
-    font-weight: 400;
-    position: absolute;
-    left: 571px;
-    top: 29px;
-    width: 100px;
-    height: 35px;
-  }
-  
-  .user-img {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    left: 524px;
-    top: 16px;
-    object-fit: cover;
-  }
-  
-  /* --------------------- ventana emergente inicio sesion -----------------------*/
-  
-  .modal {
-    width: 100%;
-    height: 100%;
+
+  .navbar-mobile {
     position: fixed;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    z-index: 1000;
+    width: 100%;
+    height: 140vh;
+    background: #fff;
+    right: -100%;
+    top: 0;
+    text-align: left;
+    padding: 100px 0px;
+    z-index: 100;
+    transition: 0.8s;
   }
-  
-  .modal-contenido {
-    background-color: #fefefe;
-    margin: 10% auto;
+
+  .navbar-mobile a {
+    display: block;
     padding: 20px;
-    border: 1px solid #888;
-    width: 40%;
+    color: #001f3f;
+    text-decoration: none;
+  }
+
+  .navbar-mobile button {
     position: relative;
-    text-align: center;
-    z-index: 1000;
-    border-radius: 30px;
-  }
-  
-  .modal-contenido h2 {
-    margin-top: 30px;
-    font-family: Poppins;
-    font-size: 40px;
-    color: #000;
-  }
-  
-  .modal-contenido h3 {
-    margin-top: 10px;
-    color: #636363;
-    font-family: Poppins;
-    font-size: 15px;
-  }
-  
-  .modal-contenido form {
-    padding: 20px;
-    margin-top: 30px;
-  }
-  
-  .modal-contenido input {
-    border-radius: 11px;
-    border: 1px solid #001F3F;
-    background: #FFF;
-  }
-  
-  .modal-contenido button {
-    margin-top: 20px;
+    left: 60px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     width: 400px;
     height: 45px;
     background-color: #304C78;
@@ -312,13 +518,40 @@ header {
     font-family: Poppins;
     font-size: 16px;
   }
-  
-  .cerrar-modal {
-  
-    position: absolute;
-    top: 10px;
-    right: 30px;
-    font-size: 40px;
-    cursor: pointer;
+
+  .navbar-mobile a:hover {
+    color: #ffd700;
   }
-  
+
+  .esconder-menu {
+    position: absolute;
+    top: 20px;
+    right: 0px;
+  }
+
+  .logo-mobile-navbar {
+    width: 200px;
+    height: 80px;
+    position: absolute;
+    object-fit: cover;
+    float: left;
+    top: 20px;
+  }
+
+  .info-box-mobile {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+    justify-content: flex-end;
+    flex-shrink: 0;
+    width: 683px;
+    left: 20px;
+    position: relative;
+  }
+
+
+  #check:checked~.navbar-mobile {
+    right: 0;
+  }
+}
